<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hospital_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardView_light_background"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/hospital_img_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/hospital_img"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:paddingRight="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/hospital" />

            <ImageView
                android:id="@+id/hospital_info"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/info"
                android:tint="@color/colorAccent" />


        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/hospital_name_location"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:baselineAligned="false"
            app:cardBackgroundColor="@color/cardView_light_background"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_avg_cost"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/cost_100"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/average_cost"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_dietitians_online"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/dietitians_number"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/dietitians_online"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_hospital_ratings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/rating_10"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/rating"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/specialities"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/tv_hospital_specialities"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kids_sports"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:id="@+id/hospital_name_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hospital_img_info"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <TextView
                    android:id="@+id/tv_hospital_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="1dp"
                    android:paddingTop="8dp"
                    android:text="@string/hospital_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_hospital_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="1dp"
                    android:text="@string/location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_arrow_right"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>
