<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/svLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:padding="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fc_login_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                tools:context=".activity.LoginActivity" />

            <TextView
                android:id="@+id/txtTAndCInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_and_c_info"
                android:textColor="@color/colorAccent"
                tools:layout_editor_absoluteX="86dp"
                tools:layout_editor_absoluteY="480dp" />

            <LinearLayout
                android:id="@+id/linearLayoutFooterTermsAndPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/terms_link"
                    android:textColor="@color/colorPrimary"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="480dp" />

                <TextView
                    android:id="@+id/txtAnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="&amp;"
                    android:textColor="@color/colorAccent"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="480dp" />

                <TextView
                    android:id="@+id/txtPrivayPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_link"
                    android:textColor="@color/colorPrimary"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="480dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutFaqContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtFaqLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/faq_link"
                    android:textColor="@color/colorPrimary"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="480dp" />

                <TextView
                    android:id="@+id/txtContactUsLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/contact_us_link"
                    android:textColor="@color/colorPrimary"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="480dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
