<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblEmailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/emailId"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp" />

        <EditText
            android:id="@+id/txtEmailId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/text_border"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEmailId"
            android:paddingLeft="5dp" />

        <TextView
            android:id="@+id/lblPasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/passwd"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailId"
            android:layout_marginLeft="8dp" />

        <EditText
            android:id="@+id/txtPasswd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/text_border"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPasswd" />

        <TextView
            android:id="@+id/lblForgotPasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/forgotPasswd"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswd"
            android:layout_marginRight="8dp" />

        <Button
            android:id="@+id/btnBackToLoginOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_back_login"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/lbl_btn_back"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblForgotPasswd"
            android:layout_marginLeft="8dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_back_login"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/lbl_btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/btnBackToLoginOptions"
            app:layout_constraintTop_toBottomOf="@+id/lblForgotPasswd" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
